syntax = "proto3";

import 'orders.proto';

package orders;

option java_multiple_files = true;
option java_package = "org.gangel.orders.proto";
option java_outer_classname = "OrdersProto";

service OrdersService {
	rpc CreateNewCustomer(NewCustomerRequest) returns (NewCustomerResponse) {}
	rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse) {}

	rpc CreateNewProduct(NewProductRequest) returns (NewProductResponse) {}
	rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
	
	rpc AddNewOrder(NewOrderRequest) returns (NewOrderResponse) {}
	rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}

	rpc Ping(PingRequest) returns (PingResponse) {}
}

// --------------------------
message PingRequest {
}

message PingResponse {
	string response = 1;
}

// --------------------------
message NewCustomerRequest {
	Customer customer = 1;
}
message NewCustomerResponse {
	int64 id = 1;
}

message GetCustomerRequest {
	int64 id = 1; 
}

message GetCustomerResponse {
	Customer customer = 1;
}

// --------------------------
message NewProductRequest {
	Product product = 1;
}

message NewProductResponse {
	int64 id = 1;
}

message GetProductRequest {
	int64 id = 1;
}

message GetProductResponse {
	Product product = 1; 
}

// --------------------------
message NewOrderRequest {
	Orders orders = 1; 
}

message NewOrderResponse {
	int64 id = 1; 
}

message GetOrderRequest {
	int64 id = 1; 
}

message GetOrderResponse {
	Orders orders = 1; 
}
